fixtures/vyper/simple/overflow/negative/i64-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-9223372036854775808"
#!           ],
#!           "caller": "0x6C52a88defDB76d7f33B75965cb797D82ba6EB26"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int64) -> int64:
    return witness - 1
